[package]
name = "media_client"
version = "0.1.0"
edition = "2021"

[dependencies]
messages = { git = "https://github.com/Rustastic/Messages.git"}
assembler = { git = "https://github.com/Rustastic/Assembler.git"}
source_routing = { git = "https://github.com/Rustastic/source_routing.git" }
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam-channel = "0.5.13"
log = "0.4"
colored = "3"
html_parser = "=0.7.0"
webbrowser = "1.0.3"
image = "0.25.5"
base64 = "0.22.1"
packet_cache = { git = "https://github.com/Rustastic/PacketCache.git"}